2008-06-19  Perry McFarlane  <perry_m@fastmail.fm>
* ui.c, xep80.c: improve XEP80 state saving


2008-06-18  Perry McFarlane  <perry_m@fastmail.fm>
* DOC/CREDITS, DOC/TODO, USAGE, atari.c, atari_sdl.c, configure.ac, pia.c,
platform.h, statesav.c, ui.c, xep80.[ch], xep80_fonts.[ch]:
Added XEP80 emulation by Mark Grebe to the SDL version, from Atari800MacX


2008-06-18  Christian Groessler  <chris@groessler.org>
* dc/atari_dc.c (Atari_Keyboard): recognize TAB key.
* atari_x11.c (Atari_DisplayScreen): add missing XSync call in not-SHM
part.
* ui.c, ui.h: add additional parameter to the fMessage function,
indicating whether to wait for a key press. Display a "please wait"
message in SaveState and LoadState.
* ui_basic.c: adapt to fMessage change. Change BasicUIMessage to use
the new parameter and clear status line before writing the new
message.


2008-06-15  Christian Groessler  <chris@groessler.org>
* rdevice.c, dc/Makefile.dc, dc/config.h, dc/atari_dc.c: add serial R:
support for Dreamcast


2008-06-14  Perry McFarlane  <perry_m@fastmail.fm>
* input.c: 5200 bit 5 toggle fix (Star Trek)
* atari_sdl.c, input.c: fix shift+control keys
* atari_sdl.c, dos/atari_vga.c, javanvm/atari_javanvm.c,
  win32/atari_win32.c: further shift+control fixes
* USAGE: updated keyboard
* statesav.c: fix gzFile


2008-06-13  Perry McFarlane  <perry_m@fastmail.fm>
* rdevice.c, configure.ac: fix for win32 R: device
* pokey.c: IRQEN fix
* pokeysnd.c: add #ifdef PBI_XLD


2008-06-12  Christian Groessler  <chris@groessler.org>
* rdevice.c, configure.ac: R: device now not longer inherently supports
network (with serial as an additional option). Now serial-only,
network-only, or both can be selected.


2008-05-31  Piotr Fusik  <fox@scene.pl>
* atari.c, pokey.c: made the BASIC version compilable


2008-05-29  Perry McFarlane  <perry_m@fastmail.fm>
* atari_sdl.c, cassette.c, input.c, memory.c, pbi_bb.c, pbi_proto80.c,
pbi_xld.c, pokeysnd.c, sio.c, statesav.c, ui.h, util.[ch], votrax.c: